[gd_scene load_steps=13 format=2]

[ext_resource path="res://theme/UI.tres" type="Theme" id=1]
[ext_resource path="res://scenes/Color_picker.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Customize.gd" type="Script" id=3]
[ext_resource path="res://addons/primitives2d/circle2d.gd" type="Script" id=4]
[ext_resource path="res://addons/primitives2d/rectangle2d.gd" type="Script" id=5]
[ext_resource path="res://scenes/Menu_camera.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/primitives2d/arc2d.gd" type="Script" id=7]
[ext_resource path="res://textures/power ups/crystall_ball.png" type="Texture" id=8]
[ext_resource path="res://scripts/Utilities/PolygonCircle.gd" type="Script" id=9]

[sub_resource type="InputEventAction" id=14]
action = "ui_cancel"

[sub_resource type="ShortCut" id=15]
shortcut = SubResource( 14 )

[sub_resource type="Environment" id=16]
background_mode = 4
glow_enabled = true
glow_intensity = 5.0
glow_strength = 0.96
glow_blend_mode = 0
glow_hdr_threshold = 0.71
glow_bicubic_upscale = true
glow_high_quality = true

[node name="Customize" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -82.0
margin_right = 145.0
margin_bottom = 86.0
focus_mode = 2

[node name="Color" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 24.0
margin_right = -6.0
margin_bottom = -6.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="p1" type="Label" parent="TabContainer/Color"]
margin_left = 13.0
margin_top = 18.0
margin_right = 125.0
margin_bottom = 26.0
text = "Player 1 Color"

[node name="p2" type="Label" parent="TabContainer/Color"]
margin_left = 156.0
margin_top = 18.0
margin_right = 268.0
margin_bottom = 26.0
text = "Player 2 Color"

[node name="Colors" type="HBoxContainer" parent="TabContainer/Color"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Color_picker" parent="TabContainer/Color/Colors" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 137.0
margin_bottom = 138.0
focus_mode = 0
size_flags_horizontal = 3
grid_columns = 6
panel_size = Vector2( 0.475, 0.56 )

[node name="Color_picker2" parent="TabContainer/Color/Colors" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 141.0
margin_right = 278.0
margin_bottom = 138.0
focus_mode = 0
size_flags_horizontal = 3
player = "Player2"
grid_columns = 6
panel_size = Vector2( 0.475, 0.56 )

[node name="Ball" type="GridContainer" parent="TabContainer"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 24.0
margin_right = -6.0
margin_bottom = -6.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 8

[node name="ColorRect" type="ColorRect" parent="TabContainer/Ball"]
margin_right = 32.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect2" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect3" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 72.0
margin_right = 103.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect3"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect4" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 107.0
margin_right = 138.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect4"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect5" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 142.0
margin_right = 173.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect5"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect6" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 177.0
margin_right = 208.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect6"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect7" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 212.0
margin_right = 243.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect7"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect8" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 247.0
margin_right = 278.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect8"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect9" type="ColorRect" parent="TabContainer/Ball"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect9"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect10" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect10"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect11" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 72.0
margin_top = 36.0
margin_right = 103.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect11"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect12" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 107.0
margin_top = 36.0
margin_right = 138.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect12"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect13" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 142.0
margin_top = 36.0
margin_right = 173.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect13"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect14" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 177.0
margin_top = 36.0
margin_right = 208.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect14"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect15" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 212.0
margin_top = 36.0
margin_right = 243.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect15"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect16" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 247.0
margin_top = 36.0
margin_right = 278.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect16"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect17" type="ColorRect" parent="TabContainer/Ball"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect17"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect18" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 36.0
margin_top = 72.0
margin_right = 68.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect18"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect19" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 72.0
margin_top = 72.0
margin_right = 103.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect19"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect20" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 107.0
margin_top = 72.0
margin_right = 138.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect20"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect21" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 142.0
margin_top = 72.0
margin_right = 173.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect21"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect22" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 177.0
margin_top = 72.0
margin_right = 208.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect22"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect23" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 212.0
margin_top = 72.0
margin_right = 243.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect23"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect24" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 247.0
margin_top = 72.0
margin_right = 278.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect24"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect25" type="ColorRect" parent="TabContainer/Ball"]
margin_top = 107.0
margin_right = 32.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect25"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect26" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 36.0
margin_top = 107.0
margin_right = 68.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect26"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect27" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 72.0
margin_top = 107.0
margin_right = 103.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect27"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect28" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 107.0
margin_top = 107.0
margin_right = 138.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect28"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect29" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 142.0
margin_top = 107.0
margin_right = 173.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect29"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect30" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 177.0
margin_top = 107.0
margin_right = 208.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect30"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect31" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 212.0
margin_top = 107.0
margin_right = 243.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect31"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ColorRect32" type="ColorRect" parent="TabContainer/Ball"]
margin_left = 247.0
margin_top = 107.0
margin_right = 278.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0980392, 0.196078, 1 )

[node name="Button" type="Button" parent="TabContainer/Ball/ColorRect32"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="Balls" type="Node2D" parent="."]

[node name="Common" type="Node2D" parent="Balls"]
position = Vector2( 37, 48 )

[node name="Circle2D" type="Node2D" parent="Balls/Common"]
script = ExtResource( 4 )
radius = 5.0
filled = true

[node name="Soccer" type="Node2D" parent="Balls"]
position = Vector2( 73, 48 )

[node name="Circle2D2" type="Node2D" parent="Balls/Soccer"]
script = ExtResource( 4 )
radius = 5.0
filled = true

[node name="Circle2D" type="Node2D" parent="Balls/Soccer"]
script = ExtResource( 4 )
color = Color( 0, 0, 0, 1 )
radius = 2.0
filled = true

[node name="Polygon2D" type="Polygon2D" parent="Balls/Soccer"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -4.89063, -1, -3, -2, -2, -3, -1, -4, -1.01563, -4.89063, -1.48438, -4.77344, -1.9375, -4.625, -2.53125, -4.3125, -2.82031, -4.14063, -3.55469, -3.53125, -4, -3, -4.19531, -2.73438, -4.32813, -2.48438, -4.63281, -1.89844 )

[node name="Polygon2D2" type="Polygon2D" parent="Balls/Soccer"]
position = Vector2( 0, -0.0153141 )
scale = Vector2( -1, 1 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -4.89063, -1, -3, -2, -2, -3, -1, -4, -1.01563, -4.89063, -1.48438, -4.77344, -1.9375, -4.625, -2.53125, -4.3125, -2.82031, -4.14063, -3.55469, -3.53125, -4, -3, -4.19531, -2.73438, -4.32813, -2.48438, -4.63281, -1.89844 )

[node name="Polygon2D3" type="Polygon2D" parent="Balls/Soccer"]
position = Vector2( 0, -0.0153141 )
scale = Vector2( -1, -1 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -4.89063, -1, -3, -2, -2, -3, -1, -4, -1.01563, -4.89063, -1.48438, -4.77344, -1.9375, -4.625, -2.53125, -4.3125, -2.82031, -4.14063, -3.55469, -3.53125, -4, -3, -4.19531, -2.73438, -4.32813, -2.48438, -4.63281, -1.89844 )

[node name="Polygon2D4" type="Polygon2D" parent="Balls/Soccer"]
scale = Vector2( 1, -1 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -4.89063, -1, -3, -2, -2, -3, -1, -4, -1.01563, -4.89063, -1.48438, -4.77344, -1.9375, -4.625, -2.53125, -4.3125, -2.82031, -4.14063, -3.55469, -3.53125, -4, -3, -4.19531, -2.73438, -4.32813, -2.48438, -4.63281, -1.89844 )

[node name="Basket" type="Node2D" parent="Balls"]
position = Vector2( 109, 48 )

[node name="Circle2D" type="Node2D" parent="Balls/Basket"]
script = ExtResource( 4 )
color = Color( 1, 0.635294, 0.0784314, 1 )
radius = 5.0
filled = true

[node name="Line2D" type="Line2D" parent="Balls/Basket"]
points = PoolVector2Array( 0, -5, 0, 5 )
width = 0.5
default_color = Color( 0, 0, 0, 1 )

[node name="Line2D2" type="Line2D" parent="Balls/Basket"]
points = PoolVector2Array( -5, 0, 5, 0 )
width = 0.5
default_color = Color( 0, 0, 0, 1 )

[node name="Arc2D" type="Node2D" parent="Balls/Basket"]
position = Vector2( 5, 0 )
script = ExtResource( 7 )
color = Color( 0, 0, 0, 1 )
radius = 3.0
start_degrees = -107.0
end_degrees = -253.0
line_width = 1.1

[node name="Arc2D2" type="Node2D" parent="Balls/Basket"]
position = Vector2( -5, 0 )
scale = Vector2( -1, 1 )
script = ExtResource( 7 )
color = Color( 0, 0, 0, 1 )
radius = 3.0
start_degrees = -107.0
end_degrees = -253.0
line_width = 1.1

[node name="Crystal" type="Polygon2D" parent="Balls"]
position = Vector2( 144, 48 )
texture = ExtResource( 8 )
texture_offset = Vector2( 16, 16 )
texture_scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 5.1, 0, 4.98855, 1.06035, 4.65908, 2.07436, 4.12599, 2.9977, 3.41257, 3.79004, 2.55, 4.41673, 1.57599, 4.85039, 0.533095, 5.07206, -0.533095, 5.07206, -1.57599, 4.85039, -2.55, 4.41673, -3.41257, 3.79004, -4.12599, 2.9977, -4.65908, 2.07436, -4.98855, 1.06035, -5.1, -4.45856e-07, -4.98855, -1.06035, -4.65908, -2.07436, -4.12599, -2.9977, -3.41257, -3.79004, -2.55, -4.41673, -1.57599, -4.85039, -0.533094, -5.07206, 0.533096, -5.07206, 1.57599, -4.85039, 2.55, -4.41673, 3.41257, -3.79004, 4.12599, -2.9977, 4.65908, -2.07436, 4.98855, -1.06035 )
script = ExtResource( 9 )
radius = 5.1

[node name="Rectangle2D" type="Node2D" parent="Balls"]
script = ExtResource( 5 )
width = 32.0
height = 32.0
line_width = 2.0
centered = true

[node name="Button" type="Button" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 44.0
margin_bottom = 18.0
shortcut_in_tooltip = false
shortcut = SubResource( 15 )
text = "Back"

[node name="Menu_camera" parent="." instance=ExtResource( 6 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 16 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
